--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,8 @@
 \usepackage{xcolor}
 \usepackage{graphicx}
 \usepackage{lscape}
+\usepackage{amssymb}
+\usepackage{amsmath}
 
 
 \degree{Doctor of Philosophy}
