barseq vs tileseq figure

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -157,6 +157,12 @@ In terms of mutagenesis (Stage 1), DMS-TileSeq is identical to DMS-BarSeq.  Give
 
 To validate the reliability of DMS-TileSeq, we first applied it to UBE2I and compared the results with those obtained using DMS-BarSeq. Correlation between DMS-TileSeq and DMS-BarSeq was comparable to the correlation observed between biological replicates of DMS-BarSeq (Supplementary Figure 2), suggesting that reproducibility of DMS-TileSeq is at least comparable to that of DMS-BarSeq. DMS-TileSeq and DMS-BarSeq showed comparable agreement with complementation scores from manual assays (Supplementary Figure 3).  Thus, DMS-TileSeq avoids the substantial cost of arraying and sequencing thousands of individual clones, while performing on par with DMS-BarSeq in terms of reliability of the functional complementation scores it produces.
 
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=.7\textwidth]{img/barVtile.pdf}
+	\caption{Comparison of BarSeq to TileSeq scores. }
+	\label{fig:barVtile}
+\end{figure}
 
 \subsection{A complete functional map of UBE2I}
 
