--- a/outline.tex
+++ b/outline.tex
@@ -38,7 +38,7 @@
 			\item A barcode-based Deep Mutational Scanning strategy
 			\begin{enumerate}
 				\item POPCode: A Precision Oligo Pool Codon alteration mutagenesis method
-				\item KiloSEQ: A highly multiplexed amiplicon sequencing method
+				\item KiloSEQ: A highly multiplexed amplicon sequencing method
 				\item A barcoded-based functional map of UBE2I
 			\end{enumerate}
 			\item A complete functional map of UBE2I
